--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -4,7 +4,7 @@
     },
     "About": {
         "TITLE": "About Us",
-        "TEXT": " This website has been created by a Cuban collector, Luis Diaz Mijares, who has dedicated decades to gather all the pieces shown in the different sections, as well as to the development of each topic. The whole content is entirely his responsibility and authorship. Lic. Ulises Ortega Camero and Maricarla Esquivel Sobrado, were in charge of the programming part (architecture and design of the website). Translation Spanish to English: Lic. Mayen Vincench Pereira. We will feel satisfied if our work contributes in a way to the spreading and knowledge of the Cuban identity and culture."
+        "TEXT": " This space has been conceived by a Cuban collector, Eng. Luis Díaz Mijares, who has spent decades gathering the pieces shown in its different thematic sections and making the corresponding pages. All of its content is your sole responsibility and responsibility. <br> Design and development of the site: <br> Lic. Yoel de la Noval Denis <br> Lic. Ulises Ortega Camero <br> Lic. Maricarla Esquivel <br> Ing. Sandy Cordoví González <br> Ing. Anabel Andrés Costa <br> Translation Spanish / English: Lic. In English Language Mayen Vincench Pereira <br> If with our work we can contribute something to the dissemination and knowledge of Cuban culture and identity, we will feel satisfied."
     },
     "News": {
         "TITLE": "News",
@@ -35,6 +35,9 @@
         "EnvioPrecio":"Shipping inside US ",
         "EnvioFuera":"Shipping outside US "
     },
+    "V-Post":{
+        "Share":"You can share this image through your social networks free of cost"
+    },
     "TextComponent":{
         "Texto":"Text",
         "Galeria":"Gallery"
@@ -48,5 +51,8 @@
         "Procedencia":"Source",
         "Precio":"Price",
         "Seleccionar":"Select"
+    },
+    "Search": {
+        "Placeholder": "Type here to search..."
     }
  }
