18-06-2020-See_More function in modals

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -55,6 +55,9 @@
         "Precio":"Price",
         "Seleccionar":"Select"
     },
+    "Imagen":{
+        "Zoom":"Zoom"
+    },
     "Search": {
         "Placeholder": "Type here to search..."
     }
