--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -56,6 +56,9 @@
         "Precio":"Precio",
         "Seleccionar":"Seleccionar"
     },
+    "Imagen":{
+        "Zoom":"Ver imagen ampliada"
+    },
     "Search":{
         "Placeholder":"Escriba aquí para buscar..."
     }
