27-06-2020-Biblioteca virtual separada

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -54,7 +54,9 @@
         "Dimension":"Dimensión",
         "Procedencia":"Procedencia",
         "Precio":"Precio",
-        "Seleccionar":"Seleccionar"
+        "Seleccionar":"Seleccionar",
+        "SigloXX":"Siglo XX",
+        "SigloXIX":"Siglo XIX"
     },
     "Imagen":{
         "Zoom":"Ver imagen ampliada"
