--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -53,7 +53,9 @@
         "Dimension":"Dimension",
         "Procedencia":"Source",
         "Precio":"Price",
-        "Seleccionar":"Select"
+        "Seleccionar":"Select",
+        "SigloXX":"20th Century",
+        "SigloXIX":"19th Century"
     },
     "Imagen":{
         "Zoom":"Zoom"
