30-06-2020-Add thematics in ie8n

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -62,5 +62,8 @@
     },
     "Search": {
         "Placeholder": "Type here to search..."
+    },
+    "Category":{
+        "Tematica":"Thematics"
     }
  }
