--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -63,5 +63,8 @@
     },
     "Search":{
         "Placeholder":"Escriba aquí para buscar..."
+    },
+    "Category":{
+        "Tematica":"Temáticas"
     }
 }
